# _passd

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/commands/: copy.rs  copy_item.rs  create_directory.rs  decrypt.rs  encrypt.rs  find_items.rs  generate_password.rs  init.rs  initialize.rs  list_items.rs  mod.rs  move_item.rs  read_file.rs  remove_directory.rs  remove_file.rs  search_content.rs  write_file.rs
src/configs/: mod.rs
src/handlers/: clone_to.rs  copy_to.rs  create.rs  delete.rs  diagnose.rs  find.rs  mod.rs  move_to.rs  read.rs  read_content.rs  read_metadata.rs  update.rs
src/models/: config.rs  key_manager.rs  metadata.rs  mod.rs  secret.rs  secret_manager.rs  secrets.rs
src/routes/: command.rs  mod.rs  not_found.rs
src/services/: vault.rs
src/types/: command_request.rs  command_response.rs  mod.rs
src/utils/: checksum.rs  config.rs  decrypt.rs  encrypt.rs  filters.rs  fs.rs  logger.rs  mod.rs  path_utils.rs
tests/: mod.rs  test_command_copy.rs  test_command_copy_item.rs  test_command_create_directory.rs  test_command_decrypt.rs  test_command_encrypt.rs  test_command_find_items.rs  test_command_generate_password.rs  test_command_init.rs  test_command_initialize.rs  test_command_list_items.rs  test_command_move_item.rs  test_command_remove_directory.rs  test_command_remove_file.rs  test_util_decrypt.rs  test_util_encrypt.rs
tests/assets/keys/: encrypted_message.asc  invalid_priv.asc  invalid_pub.asc  valid_priv.asc  (+3 more)
tests/configs/: mod.rs  test_resolve_configs.rs  test_validate_config.rs
tests/utils/: configs.rs
