[package]
name = "passd"
version = "0.1.0"
edition = "2021"

[dependencies]
pgp = "0.14.2"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.135"
warp = "0.3.7"
tokio = { version = "1", features = ["full"] }
directories = "6.0.0"
shellexpand = "3.1.0"
path-absolutize = "3.1.1"

[dev-dependencies]
tempfile = "3.15.0"
