[package]
name = "passd"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
config = "0.15.13"
directories = "6.0.0"
dirs = "6.0.0"
fern = "0.7.1"
log = "0.4.27"
sequoia-openpgp = "2.0.0"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.9"
toml = "0.9.2"

[dev-dependencies]
tempfile = "3.20.0"
